--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body{
     padding: 0px;
     margin: 0px;
     font-family:Roboto;
+    height: 100%;
 }
 .header-search-bar{
  background-color: var(--lightw);
@@ -59,7 +60,7 @@ body{
     width: 36px;
 }
 .header-searchbar-container{
-    padding: 14px 24px 0 24px;
+    padding: 14px 24px 5px 24px;
 }
 .header-span{
     display: grid;
@@ -106,6 +107,10 @@ body{
     align-items: center;
     grid-column-gap:16px;
     padding: 0px 24px;
+    height:71px;
+    background-color:#FFFFFF;
+    overflow-y:hidden;
+
 }
 .slider::-webkit-scrollbar { width: 0 !important }
 .in-slider{
@@ -145,6 +150,8 @@ body{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    width:50px;
+    height: 19px;
 }
 .span-section-grid{
     grid-column: 1/2;
@@ -179,6 +186,7 @@ right:13px;
 }
 .section-image-container{
     padding: 0px 24px;
+    padding-top:23px;
 }
 .second-section{
     text-align:center;
@@ -212,9 +220,14 @@ right:13px;
 }
 .third-section-flex-container{
     padding-top: 8px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap:wrap;
 }
 .third-section-flex-container > *{
 padding-top: 24px;
+min-width: 163px;
+width: 50%;
 }
 .third-section-href{
     text-decoration: none;
@@ -264,4 +277,164 @@ padding-top: 24px;
     display:flex;
     width: 97px;
     justify-content:space-between;
+}
+.slider-container::after{
+    content:"";
+    position:absolute;
+    left:0;
+    right:0;
+    bottom: 0px;
+    /* box-shadow:2px 2px 5px #717171; */
+    border-bottom:2px inset #f3eeee;
+    padding: 1px;
+}
+header{
+    position: sticky;
+    top: 0;
+    background-color: #FFFFFF;
+}
+.slider-container{
+    height:70px;
+}
+@media only screen and (max-width:744px){
+.footer-main-container{
+    padding:24px;
+}
+.facebook-svg-container{
+    display:none;
+}
+.twitter-svg-container{
+    display:none;
+}
+.insta-svg-contaner{
+    display:none;
+}
+.footer-main-container{
+    padding: 24px;
+}
+.header-tab-view{
+    display:none;
+}
+}
+@media only screen and (min-width:744px){
+    .third-section-flex-container > *{
+        width:33%;
+    }
+    .first-footer-first-part > h3{
+        width: 80%;
+        margin-bottom:0;
+    }
+    .first-footer-first-part > p{
+        flex-basis: 33.33%;
+         margin-bottom: 0px;
+    }
+    .footer-main-container{
+        padding: 40px;
+    }
+    .first-footer-first-part{
+        display:flex;
+        flex-direction:row;
+        flex-wrap:wrap;
+    }
+    .first-footer-first-part p > span{
+        height: 28px;
+        display: inline-block;
+        padding-right: 17px;
+        line-height: 1.3;
+    }
+    .footer-last-part{
+        display: flex;
+        flex-direction:column;
+        align-items: center;
+    }
+    .footer-last-part-one{
+        width: 320px;
+    }
+    .rupees-container-footer-last{
+        margin-right:25px;
+    }
+
+
+
+}
+@media only screen and (min-width:550px){
+    .section-image-container-two{
+        grid-row-gap:36px;
+        grid-template-columns: 1fr 1fr;
+        grid-column-gap:22px;
+        display:grid;
+    }
+    .image-container-section img{
+        min-height:229px;
+    }
+}
+@media only screen and (min-width:744px){
+       .header-container{
+        display:none;
+       }
+       #hide-logo{
+        display:none;
+       }
+       header{
+        height:105px;
+       }
+       .svg-two-cont{
+        height:10px;
+       }
+       .header-tab-view{
+        display:flex;
+       }
+       .first-part-header{
+        display:flex;
+       }
+       .search-bar-header-top{
+        display:flex;
+        border: 1px solid #DDDDDD;
+        box-shadow:0 1px #d6d0d0;
+        border-radius: 30px;
+        align-items:center;
+        height: 48px;
+       }
+       .second-part-header{
+        display: flex;
+       }
+       .header-right-part{
+        display:flex;
+       }
+       .header-tab-view{
+        padding: 0px 40px;
+        height:100px;
+        align-items: center;
+       }
+       .search-bar-header-top > div > span{
+            font-size:14px;
+            font-weight: 600;
+       }
+       .search-bar-header-top > span {
+        width: 1px;
+        height:24px;
+        background-color:#DDDDDD;
+       }
+       .search-bar-header-top > div{
+        padding: 0px 16px;
+       }
+       .header-svg-container-search{
+        padding: 0px !important;
+        height:32px;
+        width:32px;
+        display:flex;
+        align-items: center;
+        justify-content:center;
+        background-color: #FF385C;
+        border-radius:100%;
+        margin: 3px 6px 3px 0px;
+       }
+       .svg-container{
+        display:flex;
+        align-items: center;
+        }
+        .search-bar-header-top{
+            padding: 0px 16px;
+        }
+    
 }
